[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/menu/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/default.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/menu/sin.png" type="Texture" id=3]
[ext_resource path="res://assets/menu/quad.png" type="Texture" id=4]
[ext_resource path="res://assets/menu/linear.png" type="Texture" id=5]


[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -133.0
margin_top = -235.0
margin_right = 133.0
margin_bottom = 235.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnLinear" type="Button" parent="VBoxContainer"]
margin_right = 266.0
margin_bottom = 114.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Lineare Level"
icon = ExtResource( 5 )
expand_icon = true

[node name="BtnQuad" type="Button" parent="VBoxContainer"]
margin_top = 118.0
margin_right = 266.0
margin_bottom = 233.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Quadratische Level"
icon = ExtResource( 4 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnSin" type="Button" parent="VBoxContainer"]
margin_top = 237.0
margin_right = 266.0
margin_bottom = 351.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Sinus Level"
icon = ExtResource( 3 )
expand_icon = true

[node name="BtnMulti" type="Button" parent="VBoxContainer"]
margin_top = 355.0
margin_right = 266.0
margin_bottom = 470.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Gemischte Level"
expand_icon = true

[connection signal="pressed" from="VBoxContainer/BtnLinear" to="." method="_on_BtnLinear_pressed"]
[connection signal="pressed" from="VBoxContainer/BtnQuad" to="." method="_on_BtnQuad_pressed"]
[connection signal="pressed" from="VBoxContainer/BtnSin" to="." method="_on_BtnSin_pressed"]
[connection signal="pressed" from="VBoxContainer/BtnMulti" to="." method="_on_BtnMulti_pressed"]
